fix welcome message more kind

--- a/views/attentions/welcome_user.slim
+++ b/views/attentions/welcome_user.slim
@@ -3,6 +3,5 @@
     | ようこそ、#{@user.name}(#{@user.slug})
   .panel-body
     ul
-      li 登録に成功しました。
-      li 「Sign In」からログインできます。
-      li ログインすると、スライドを投稿できます。
+      li ユーザー登録に成功しました。
+      li 「New」からスライドを投稿できます。
