more kind welcome message

--- a/views/attentions/welcome_user.slim
+++ b/views/attentions/welcome_user.slim
@@ -3,5 +3,6 @@
     | ようこそ、#{@user.name}(#{@user.slug})
   .panel-body
     ul
-      li ユーザー登録に成功しました。
-      li 「New」からスライドを投稿できます。
+      li ユーザーを登録しました。
+      li ログイン中は、「+ New slide」からスライドを投稿できます。
+      li ログアウトするには、右上のアイコンをクリックしてください。
