--- a/views/layout.slim
+++ b/views/layout.slim
@@ -59,7 +59,7 @@ html
           - nowyear = Date.today.strftime('%Y')
           = since
           - unless since == nowyear
-            = "&nbsp;-&nbsp;" + nowyear
+            = " - " + nowyear
     /! /container
     / jquery & bootstrap
     script src="/js/bootstrap.min.js"
