--- a/views/slide.slim
+++ b/views/slide.slim
@@ -7,6 +7,10 @@
           img src="#{url}" alt="page #{i}"
     #slideControls.panel
       #indicator
+        p
+          span#nowNumber= 1
+          span= "/"
+          span= @page_number
         progress#pageIndicator max="#{@page_number - 1}" value="0"
       #controls
         .btn-group
